remove endpoint
